--- a/css/styles.css
+++ b/css/styles.css
@@ -87,6 +87,7 @@ img {
 
 .address-menu-list {
     display: flex;
+    align-items: center;
     gap: 40px;
 }
 
@@ -114,15 +115,36 @@ img {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    transition: color 250ms
+    cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.header-menu-link .current{
+    position: relative;
+}
+
+.header-menu-link .current::after{
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    width: 100%;
+    height: 4px;
+    background-color: #404bbf;
+    border-radius: 2px;
 }
 
 .address-menu-link {
-    display: block;
-    padding: 24px 0;
+    font-weight: 400;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
+    font-style: normal;
+    display: block;
+    padding: 24px 0;
+    transition: color 250ms
+    cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-menu-link:hover,
@@ -137,12 +159,15 @@ img {
 
 .main-section {
     background-color: #2e2f42;
+    padding: 188px 0;
+    height: 600px;
+    text-align: center;
     background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office1.jpeg);
+    max-width: 1440px;
+    margin: 0 auto;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    padding: 188px 0;
-    background-color: #2e2f42;
 }
 
 .section-container {
@@ -160,6 +185,7 @@ img {
     line-height: 1.07;
     letter-spacing: 0.02em;
     color: #fff;
+    text-transform: capitalize;
 }
 
 .section-btn {
@@ -176,6 +202,7 @@ img {
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
 }
 
 .section-btn:hover,
