--- a/css/styles.css
+++ b/css/styles.css
@@ -121,6 +121,7 @@ img {
 
 .header-menu-link .current{
     position: relative;
+    color: #404bbf
 }
 
 .header-menu-link .current::after{
@@ -151,7 +152,6 @@ img {
 .header-menu-link:focus,
 .address-menu-link:hover,
 .address-menu-link:focus {
-    text-decoration: underline;
     color: #404bbf;
 }
 
@@ -166,7 +166,7 @@ img {
     max-width: 1440px;
     margin: 0 auto;
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: 50%;
     background-size: cover;
 }
 
@@ -189,8 +189,10 @@ img {
 }
 
 .section-btn {
+    display: block;
     min-width: 169px;
-    height: 56;
+    height: 56px;
+    margin: 0 auto;
     padding: 16px 32px;
     font-family: inherit;
     font-size: 16px;
@@ -202,6 +204,8 @@ img {
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    transition: background-color 250ms
+    cubic-bezier(0.4, 0, 0.2, 1);
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
 }
 
@@ -225,6 +229,17 @@ img {
 
 .section-features-item{
     width: calc((100% - 72px) / 4);
+}
+
+.section-features-icon{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 112px;
+    background-color: #f4f4fd;
+    border-radius: 4px;
+    border: 1px solid #8e8f99;
+    margin-bottom: 8px;
 }
 
 .section-features-subtitle {
@@ -285,10 +300,50 @@ img {
 }
 
 .team-text {
+    padding-bottom: 8px;
     font-size: 16px;
     line-height: 1.5;
     color: #434455;
 }
+
+.section-team-list {
+    display: flex;          
+    gap: 24px;             
+    padding: 0;
+    margin: 0;
+    list-style: none;     
+    justify-content: center;
+}
+
+.section-team-item {
+    list-style: none;
+}
+
+.section-team-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    text-decoration: none;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+    color: #fff;
+}
+
+.section-team-link:hover,
+.section-team-link:focus{
+    background-color: #404bbf;
+}
+
+.section-team-icon {
+    width: 16px;
+    height: 16px;
+    fill: #f4f4fd;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 
 .team-item {
     width: calc((100% - 72px) / 4);
@@ -316,23 +371,65 @@ img {
     color: #2e2f42;
 }
 
-.portfolio-list-container{
-}
-
-.portfolio-content{
-    border: 1px solid #e7e9fc;
-    border-top: none;
-    padding: 32px 16px;
-}
-
 .portfolio-list {
     display: flex;
     flex-wrap: wrap;
     gap: 48px 24px;
+    margin: 0;
+    padding: 0;
+    list-style: none;
 }
 
-.portfolio-item{
-    width: 360px;
+.portfolio-item {
+    width: calc((100% - 48px) / 3);
+    background-color: #fff;
+    border-radius: 0 0 4px 4px;
+    overflow: hidden;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-item:hover{
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.portfolio-item:hover .overlay-text{
+    transform: translateY(0%);
+}
+
+.portfolio-list-container {
+    position: relative;
+    overflow: hidden;
+}
+
+.portfolio-img-wrap {
+    display: block;
+    width: 100%;
+    height: auto;
+}
+
+.portfolio-img-wrap:hover{
+    transform: translateY(0%);
+}
+
+.overlay-text{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding: 40px 32px;
+    color: #f4f4fd;
+    background-color: #4d5ae5;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-content {
+    border: 1px solid #e7e9fc;
+    border-top: none;
+    padding: 32px 16px;
 }
 
 .portfolio-item-subtitle {
