--- a/css/styles.css
+++ b/css/styles.css
@@ -456,6 +456,15 @@ img {
     background:#2e2f42;
 }
 
+.container-footer{
+    display: flex;
+}
+
+.container-logo{
+    margin: 0 120px 0 0;
+    padding: 0;
+}
+
 .footer-logo {
     font-family: "Raleway", sans-serif;
     display: inline-block;
@@ -486,5 +495,48 @@ img {
     color: #f4f4fd;
 }
 
+.footer-social-title{
+    font-family: "Roboto", sans-serif;
+    padding-bottom: 16px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #fff;
+}
+
+.footer-socials-list{
+    display: flex;
+    gap: 16px;
+}
+
+.footer-social-item{
+    width: 40px;
+    height: 40px;
+}
+
+.footer-social-link {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    text-decoration: none;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+}
+
+.footer-social-link:hover,
+.footer-social-link:focus{
+    background-color: #31d0aa;
+}
+
+.footer-social-icon {
+    width: 23px;
+    height: 23px;
+    fill: #f4f4fd;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
 
