--- a/css/styles.css
+++ b/css/styles.css
@@ -164,7 +164,7 @@ img {
     padding: 188px 0;
     height: 600px;
     text-align: center;
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office1.jpeg);
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office1.jpg);
     max-width: 1440px;
     margin: 0 auto;
     background-repeat: no-repeat;
