--- a/css/styles.css
+++ b/css/styles.css
@@ -343,7 +343,7 @@ img {
     width: 16px;
     height: 16px;
     fill: #f4f4fd;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -536,7 +536,7 @@ img {
     width: 24px;
     height: 24px;
     fill: #f4f4fd;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
