--- a/css/styles.css
+++ b/css/styles.css
@@ -298,6 +298,7 @@ img {
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
+    letter-spacing: 0.02em;
     color: #2e2f42;
 }
 
@@ -305,6 +306,7 @@ img {
     padding-bottom: 8px;
     font-size: 16px;
     line-height: 1.5;
+    letter-spacing: 0.02em;
     color: #434455;
 }
 
@@ -457,7 +459,7 @@ img {
 
 .container-footer{
     display: flex;
-    align-items: flex-start;
+    align-items: baseline;
 }
 
 .container-logo{
