--- a/css/styles.css
+++ b/css/styles.css
@@ -199,6 +199,7 @@ img {
     font-family: inherit;
     font-size: 16px;
     font-weight: 500;
+    line-height: 1.5;
     letter-spacing: 0.04em;
     padding: 16px 32px;
     color: #fff;
